@@ -1,0 +1,23 @@
+LIBS = @LIBS@ @PKG_LIBS@ @PKG_CFLAGS@ @LIBINTL@
+CC = @CC@
+prefix = @prefix@
+exec_prefix = @exec_prefix@
+localedir = @datadir@/locale
+INSTALL = @INSTALL@
+bindir = @bindir@
+docdir = @prefix@/share/doc/ctrlproxy-@VERSION@
+modulesdir = @libdir@/ctrlproxy
+libdir = @libdir@
+includedir = @includedir@
+destincludedir = @DESTINCLUDEDIR@
+man1dir = @mandir@/man1
+man5dir = @mandir@/man5
+cdatadir = @datadir@/ctrlproxy
+EXEEXT = @EXEEXT@
+OBJEXT = @OBJEXT@
+CFLAGS = @CFLAGS@ @PKG_CFLAGS@
+MODS_STATIC = @MODS_STATIC@
+MODS_SHARED = @MODS_SHARED@
+LDFLAGS = @LDFLAGS@
+BINS = @BINS@
+scriptdir = @datadir@/ctrlproxy/scripts
