@@ -79,17 +79,11 @@
 	</plugins>
 	<networks>
 		<network autoconnect="1" client_pass="secret" name="Freenode" fullname="CtrlProxy user">
-			<listen>
-				<ipv4 port="6667"/>
-				<ipv4 port="7667" ssl="1"/>
-			</listen>
-
 			<servers>
 				<ipv4 host="irc.freenode.net"/>
 			</servers>
 			<channel name="#ctrlproxy-test" autojoin="1"/>
 			<autosend>PRIVMSG #ctrlproxy-test :Hi There, I'm using ctrlproxy!</autosend>
-
 		</network>
 	</networks>
 </ctrlproxy>
