@@ -2,6 +2,9 @@
  	Jelmer Vernooij <jelmer@vernstok.nl>
 
 Ctrlproxy 2.7:
+ * Reduce number of files generated by configure
+ * Modules can now be compiled into ctrlproxy as well as being built as shared
+ libraries
  * Fix large number of memory leaks
  * Use libxml less internally
  * Moved documentation to seperate repository (version-independant)
